--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -53,7 +53,7 @@ parts:
     override-pull: |
       craftctl default
       craftctl set version=$(git describe --tags --abbrev=0)
-      sed -e 's|Icon=org.gnome.Podcasts|Icon=${SNAP}/usr/share/icons/hicolor/scalable/apps/org.gnome.Podcasts.svg|' -i data/org.gnome.Podcasts.desktop.in.in  
+      sed -e 's|Icon=org.gnome.Podcasts|Icon=${SNAP}/usr/share/icons/hicolor/scalable/apps/org.gnome.Podcasts.svg|' -i data/org.gnome.Podcasts.desktop.in  
     organize:
       snap/podcasts/current/usr: usr  
     
